# test10

./: .env.example  api_test.py  currency.py  data_time.py  example_output.json  functions.py  json_txt.py  pyproject.toml  task_12_1.py
tests/: test_11_12_5_2.py  test_currency.py
